# substrate-nexus

./: .env.example  .firebaserc  .gitignore  AGENT_CONTROL_MODE_SYSTEM.md  AI_ASSISTANT_CONTINUITY_GUIDE.md  AI_TASK_DELEGATION.md  BACKEND_ENVIRONMENT_CONFIG.md  Cargo.toml  DEPLOYMENT_FIX.md  DEPLOYMENT_STEPS.md  ENVIRONMENT_SETUP.md  FIREBASE_FUNCTIONS_DEPLOYMENT.md  GEMINI_QUICK_START.md  HANDOFF_TO_CLAUDE_GEMINI.md  HANDOVER_JULES.md  IETF_VCON_FORMAT.md  MY_LINK.txt  NEXUSHUB_ARCHITECTURE_ROADMAP.md  NexusHub_TexasRoot_Payload.json  PHASE1_COMPLETION_GUIDE.md  PHASE_1_NVIDIA_INTEGRATION_PLAN.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  ROADBLOCK_FIXES_SUMMARY.md  SECURITY_AUDIT_RESULTS.md  SECURITY_COMPLIANCE_REPORT.md  SECURITY_FIX_INSTRUCTIONS.md  SECURITY_FIX_NVIDIA_KEY.md  SECURITY_REMEDIATION_COMPLETE.md  SECURITY_REMEDIATION_GUIDE.md  SECURITY_SETUP.md  UE5_BLUEPRINT_IMPLEMENTATION_GUIDE.md  UE5_NATIVE_HTTP_FIX.md  UE5_QUICK_REFERENCE.md  UVCONEMITTER_INTEGRATION_GUIDE.md  agent_dids.json  baseline_results.txt  benchmark  benchmark.rs  (+48 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.firebase/: hosting.ZnJvbnRlbmRccHVibGlj.cache
.github/workflows/: ci.yml  security-check.yml
.husky/: pre-commit
Source/NexusHub_TexasRoot/: NexusHub_TexasRoot.Build.cs  TexasRootBlockchainAPI.cpp  TexasRootBlockchainAPI.h  TexasRootNodeActor.cpp  TexasRootNodeActor.h  TexasRootSettings.cpp  TexasRootSettings.h
backend/: .gitignore  analyze_security.js  command-queue-api.js  index.js  init_control_modes.js  package-lock.json  package.json  register_all_agents.js  test_kms.js  test_models.js  test_nvidia_nim.js  verify_gatekeeper.js
frontend/: fund_account.js  index.html  nexus_setup.sh  package-lock.json  package.json  start_nexus.sh  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: app.js  index.html  styles.css
frontend/src/: Dashboard.tsx  main.tsx
frontend/src/components/stitch/: BlockMonitor.tsx  DashboardHeader.tsx  RegistrationForm.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: fund_account.js  usePaseoSync.ts
functions/: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json
nexus-hub/content-engine/: giga_byte_bible.txt  rovr_manifesto.txt  technical_digest.txt
nexus-hub/protocols/: .light_cone_ingest.js.swp  audit_scan.js  byte_heartbeat.js  byte_heartbeat_sync.js  check_registry.js  final_receipt.js  fund_team.js  giga_self_anchor.js  light_cone_ingest.js  mint_ip_nft.js  mint_official.js  monitor_team.js  setup_team.sh  solo_fund_byte.js  ue_watchdog.js
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
pallets/consulting/: Cargo.toml
pallets/consulting/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/depin-desci/: Cargo.toml
pallets/depin-desci/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
scripts/: multi_submit.js  sudo_check.js  sudo_test.js
substrate-app/: realm_config.json  values.json
substrate-app/data_sources/Texas-Root-Alpha/: config.json
substrate-app/data_sources/mongodb-atlas/: config.json
substrate-app/functions/: byte_nim_query.js  config.json  vcon_firebase_projector.js  vcon_nim_embedder.js
substrate-app/triggers/: vcon_firebase_projector.json  vcon_nim_embedder.json
substrate-app/values/: firebase_project_id.json  firebase_service_token.json  nvidia_nim_host.json
substrate_spatial_browser/: README.md  pubspec.yaml
substrate_spatial_browser/android/app/: build.gradle.kts
substrate_spatial_browser/android/app/src/main/: AndroidManifest.xml
substrate_spatial_browser/android/app/src/main/kotlin/com/example/substrate_spatial_browser/: MainActivity.kt  MultisetVpsPlugin.kt
substrate_spatial_browser/ios/Runner/: AppDelegate.swift  Info.plist  MultisetVpsPlugin.swift
substrate_spatial_browser/ios/Runner.xcodeproj/: project.pbxproj
substrate_spatial_browser/lib/: firebase_options.dart  main.dart
substrate_spatial_browser/lib/channels/: multiset_platform_channel.dart
substrate_spatial_browser/lib/models/: did_identity.dart  hub_connection.dart  metabolic_state.dart  network_event.dart  spatial_synapse.dart
substrate_spatial_browser/lib/providers/: did_identity_provider.dart  hub_connection_provider.dart  metabolic_state_provider.dart
substrate_spatial_browser/lib/screens/: dashboard_screen.dart  hub_connection_screen.dart  identity_screen.dart  spatial_browser_screen.dart
substrate_spatial_browser/lib/services/: did_service.dart  hub_discovery_service.dart  multiset_rest_service.dart  spatial_query_service.dart
substrate_spatial_browser/lib/widgets/: event_feed_widget.dart  hub_status_indicator.dart  metabolic_health_gauge.dart  synapse_card_widget.dart  vitals_grid.dart
substrate_spatial_browser/test/: widget_test.dart
substrate_spatial_browser/test/models/: hub_connection_test.dart  spatial_synapse_test.dart
substrate_spatial_browser/test/widgets/: spatial_browser_screen_test.dart
substrate_spatial_browser/web/: index.html  manifest.json
