[package]
name = "pallet-depin-desci"
description = "FRAME pallet for DePIN, DeSci, and vCon integration"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
scale-info = { features = ["derive"], workspace = true }
serde = { features = ["derive"], workspace = true }
sp-std = { default-features = false, version = "14.0.0" }

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
    "serde/std",
    "sp-std/std",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
